[Programme overview] Make body overflow-x auto: temporary fix for credit stats going out of reach on small screens despite flex wrap

--- a/services/frontend/src/components/StudyProgramme/studyprogramme.css
+++ b/services/frontend/src/components/StudyProgramme/studyprogramme.css
@@ -14,6 +14,10 @@
   }
 }
 
+body {
+  overflow-x: auto;
+}
+
 .studyprogramme-courses {
   margin-top: 2em;
 }
